# rust_ca

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
rules/3_states/: 6016238609848532395.map.comp
src/: automaton.rs  lib.rs  main.rs  output.rs  rule.rs
src/automaton/: automaton_base.rs  mod.rs  tiled_automaton.rs
src/rule/: utils.rs
