[package]
name = "rust_ca"
version = "0.2.2"
license = "MIT"
authors = ["hugcis <hmj.cisneros@gmail.com>"]
edition = "2018"
description = "A tool for simulating and visualizing cellular automata in Rust"
documentation = "https://docs.rs/rust_ca"
repository = "https://github.com/hugcis/rust_ca"
readme = "README.md"
keywords = ["cellular-automata", "cellular-automaton", "simulation", "automaton", "game-of-life"]
categories = ["graphics", "command-line-utilities"]
exclude = ["/assets"]


[dependencies]
getopts = "0.2.21"
gif = "0.11.3"
rand = "0.8.5"
flate2 = "1.0.22"
rand_distr = "0.4.3"
clap = { version = "3.1.7", features = ["derive"] }
